--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,15 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108508889-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-108508889-1');
+    </script>
+    <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script> 
   </body>
 </html>
