--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/128.png">
     <title>Diversidad Media - diversidadmedia.com</title>
   </head>
   <body>
